@startuml

abstract class Roles{
+ name
+ rights
}


class Employees{
+ id
}

class Organisers{
+ id
}


class Users{
+ username
+ password
+ address
+ email
+ mobile
}


class Events{
+ date
+ seatReservationPossible
}


class Locations{
+ building
+ address
+ room
+ seats
+ standingPlace
}


class Tours{
+ description
+ category
}


class PlaceCategories{
+ name
+ category: ENUM
+ price
}

class Tickets{
+ number: optional
+ sold: available ENUM
}


class Clients{
+ firstName
+ lastName
+ address
}


class Artists{
+ name
+ genre
}

Roles <|-- Employees
Roles <|-- Organisers
Roles "0..*" -- "0..*" Users: has
Users "1" -- "0..*" Tours: manages
Events "1..*" -- "1" Tours: consists of
Events "0..*" -- "1"  Locations: takes place
Events "1..*" -- "1..*" PlaceCategories: has
Tours "0..*" -- "1..*" Artists: goes on
PlaceCategories "1" -- "1..*" Tickets: contains
Tickets "1..*" -- "1" Clients: buys

@enduml